Knife tool renders future points incorrectly once again #83391

Closed
opened 2020-12-04 10:13:19 +01:00 by Stanislav Blinov · 13 comments

System Information
Operating system: Linux 5.9.10-arch1-1
Graphics card: NVIDIA GTX 980Ti (455.45.01)

Blender Version
Broken: 2.91, 2.92
Worked: 2.90.1
Caused by b902edae75

Short description of error

Knife tool, depending on pointer position (possibly in relation to geometry) sometimes renders future cuts and points at incorrect locations (mid edges, origin...). An issue similar in appearance has already been fixed some time ago: #71578. This happens in both ortho and perspective view, but does not seem to occur if X-Ray is turned on.

Video .

Exact steps for others to reproduce the error

Attempt to use knife tool on the default cube or a plane located at world origin, starting a cut and moving the pointer carefully over various edges and vertices.

**System Information** Operating system: Linux 5.9.10-arch1-1 Graphics card: NVIDIA GTX 980Ti (455.45.01) **Blender Version** Broken: 2.91, 2.92 Worked: 2.90.1 Caused by b902edae75 **Short description of error** Knife tool, depending on pointer position (possibly in relation to geometry) sometimes renders future cuts and points at incorrect locations (mid edges, origin...). An issue similar in appearance has already been fixed some time ago: #71578. This happens in both ortho and perspective view, but does not seem to occur if X-Ray is turned on. [Video ](https://youtu.be/DNsYPZQtyGo). **Exact steps for others to reproduce the error** Attempt to use knife tool on the default cube or a plane located at world origin, starting a cut and moving the pointer carefully over various edges and vertices.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce the jumping when placing the first point on a corner and then moving along one of the edges. This does indeed not happen in 2.90.1.

I can reproduce the jumping when placing the first point on a corner and then moving along one of the edges. This does indeed not happen in 2.90.1.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I bisected, this is caused by b902edae75

I bisected, this is caused by b902edae75

Added subscriber: @patjan

Added subscriber: @patjan

Initially, I provided a small patch in D9509 that fixes #83831 and does not produce the bug described in this task. I just applied it again and tested it successfully. However, it was abandoned and I don't understand exactly why. In D9509 you can find a short discussion where I made a concern about zeroing the coordinates. Maybe, I was not completely wrong.

Initially, I provided a small patch in [D9509](https://archive.blender.org/developer/D9509) that fixes #83831 and does not produce the bug described in this task. I just applied it again and tested it successfully. However, it was abandoned and I don't understand exactly why. In [D9509](https://archive.blender.org/developer/D9509) you can find a short discussion where I made a concern about zeroing the coordinates. Maybe, I was not completely wrong.
Janusch Patas self-assigned this 2020-12-25 14:13:08 +01:00

I have updated the patch in D9931. Maybe, it helps to resolve this issue.

I have updated the patch in [D9931](https://archive.blender.org/developer/D9931). Maybe, it helps to resolve this issue.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Adding Modeling Module as that was where the previous issues and fixes were tagged.

Adding Modeling Module as that was where the previous issues and fixes were tagged.

This issue was referenced by 27a7b2e27a

This issue was referenced by 27a7b2e27ae8088dccfa87e66c820dc2e37c113a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83391
No description provided.